--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -7,7 +7,13 @@
     <title>SimpleLightbox library</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.2/simple-lightbox.min.css"
+      integrity="sha512-ej1gHD42cpakWkaVUaxh8+7ZmOUi0gva7JTB/WJBzTk80FwyodnaLwDVgVW9QBErUOa+CDtuaBJ5UrKWX/01aw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
@@ -16,6 +22,6 @@
     <ul class="gallery"></ul>
 
     <script src="js/02-lightbox.js" type="module"></script>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.2/simple-lightbox.min.js"></script>
   </body>
 </html>
